--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,58 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+.container {
+    max-width: 1440px;
+    width: 100%;
+    margin: 0 auto;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+.dropdown {
+    position: relative;
+    border: 1px solid #ffffff;
+    border-radius: 100px;
+    padding: 2px 10px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.dropdownItem {
+    position: absolute;
+    border: 1px solid black;
+    background-color: #333;
+    padding: 10px 15px;
+    cursor: pointer;
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+.dropdownItem {
+    display: none;
+}
+
+.dropdown:hover .dropdownItem {
+    display: flex;
+}
+
+.button {
+    align-items: center;
+    background: #fbc100;
+    border-radius: 12px;
+    display: flex;
+    height: 44px;
+    margin-right: 12px;
+    padding: 14px 20px 14px 16px;
+    margin-left: 20px;
+}
+
+.input {
+    align-items: center;
+    background: #fff;
+    border: 1px solid #fbc100;
+    border-radius: 10px;
+    display: flex;
+    height: 40px;
+    justify-content: space-between;
+    overflow: hidden;
+    padding-left: 10px;
+    width: 100%;
+}
+
+.hero {
+    background: rgba(247, 247, 247);
 }
